# city/src/main/java/io/github/incplusplus/beacon/city/controller/UserController.java
@@ -5,7 +5,6 @@ import io.github.incplusplus.beacon.city.generated.dto.TowerDto;
 import io.github.incplusplus.beacon.city.security.IAuthenticationFacade;
 import io.github.incplusplus.beacon.city.service.TowerService;
 import java.util.List;
-import org.apache.commons.lang3.NotImplementedException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -19,12 +18,6 @@ public class UserController implements UsersApi {
   public UserController(TowerService towerService, IAuthenticationFacade authenticationFacade) {
     this.towerService = towerService;
     this.authenticationFacade = authenticationFacade;
-  }
-
-  @Override
-  public ResponseEntity<String> createInvite(String towerId) {
-    // TODO Implement
-    throw new NotImplementedException("Logic to generate Tower invites not implemented yet.");
   }
 
   @Override
